# CPV301

./: .gitignore  main.py  notes.txt  pyproject.toml
src/: main.py
src/core/: celery.py  config.py  logger.py
src/db/: connection.py  models.py
src/tasks/: merge.py  producer.py
utils/: main.py  merge_dataset.py
