[project]
name = "cpv301"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "kagglehub>=1.0.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.1",
]
