[project]
name = "cpv301"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.38",
    "wandb>=0.26.1",
]
